
<resources>
    <string name="app_name">TopNotes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="your_name">Your Name?</string>
    <string name="r_n">Roll number</string>
    <string name="error">Please check your internet connection</string>
    <string name="connecting">Connecting...</string>
    <string name="enter_your_roll_nol">enter your Roll.No</string>
    <string name="roll_no">ROLL.NO.:</string>
    <string name="enter_your_name">enter your name</string>
    <string name="username">USERNAME:</string>
    <string name="sign_in">SIGN IN</string>




    <string name="arvindName">Name : Arvind Negi</string>
    <string name="arvindGmail">Email : arvind7799.cse16@nituk.ac.in</string>
    <string name="amitName">Name : Amit Kishor Raturi</string>
    <string name="amitGmail">Email : amitkishorraturi.cse16@nituk.ac.in</string>
    <string name="sohanName">Name : Sohan Kathait</string>
    <string name="topNotesVersion">TopNotes Version 5.0</string>
    <string name="developers_team">Developers Team</string>
    <string name="sohanEmail">Email : sohan.cse16@nituk.ac.in</string>


    <!--<string-array name="subjectList">-->

        <!--<item>DataBase Management System</item>-->
        <!--<item>Computer Networks</item>-->
        <!--<item>Network Security</item>-->
        <!--<item>Real Time System</item>-->
        <!--<item>Computer Graphics</item>-->
        <!--<item>Industry and Society</item>-->
        <!--<item>Image Processing</item>-->
        <!--&lt;!&ndash;<item>DataBase Management System</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Computer Networks</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Network Security</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Real Time System</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Industrial and Society</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>DataBase Management System</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Computer Networks</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Network Security</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Real Time System</item>&ndash;&gt;-->
        <!--&lt;!&ndash;<item>Industrial and Society</item>&ndash;&gt;-->

    <!--</string-array>-->

    <string-array name="categoryList">

        <item>Notes</item>
        <item>Question Papers</item>
        <item>Practical Files</item>
        <item>Resources</item>

    </string-array>
  
    <!--<string-array name="spinnerSubjectList">-->
        <!--<item>Select</item>-->
        <!--<item>DataBase Management System</item>-->
        <!--<item>Computer Networks</item>-->
        <!--<item>Network Security</item>-->
        <!--<item>Real Time System</item>-->
        <!--<item>Industrial and Society</item>-->
    <!--</string-array>-->

    <string-array name="spinnerCategoryList">
        <item>Select</item>
        <item>Notes</item>
        <item>Question Papers</item>
        <item>Practical Files</item>
        <item>Resources</item>

    </string-array>

    <!--<string-array name="subjectToken">-->
        <!--<item>DBMS</item>-->
        <!--<item>CN</item>-->
        <!--<item>NS</item>-->
        <!--<item>RTS</item>-->
        <!--<item>CG</item>-->
        <!--<item>IAS</item>-->
        <!--<item>IP</item>-->
    <!--</string-array>-->

    <string-array name="typeToken">
        <item>N</item>
        <item>Q</item>
        <item>P</item>
        <item>R</item>

    </string-array>






</resources>